--- a/crypto-calculator.html
+++ b/crypto-calculator.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="https://lens.usercontent.google.com/image?vsrid=CIST8dK-otfxjAEQAhgBIiRmZTNhZGYyMy00MjcyLTQzNTAtYWYyMS0zOTQ1ZjNkOWUyMzIyBiICZ2goBzjg3Lerke2OAw&gsessionid=QBhFDT2CSn_mQeYZrl4fZHxSUDyazgLWarTr13cyCHAbKx8aEOfmMQ">
+    <link rel="icon" type="image/png" href="https://i.imgur.com/9sSJDNo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Crypto Calculator</title>
 
